--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "grunt-contrib-imagemin": "^1.0.0",
     "grunt-contrib-jade": "^0.15.0",
     "grunt-contrib-sass": "^0.9.2",
+    "grunt-contrib-uglify": "^0.11.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-express": "^1.4.1",
     "grunt-parallel": "^0.4.1"
