--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "grunt": "^0.4.5",
     "grunt-bower-task": "^0.4.0",
     "grunt-contrib-clean": "^0.7.0",
+    "grunt-contrib-compress": "0.14.0",
     "grunt-contrib-copy": "^0.8.2",
     "grunt-contrib-imagemin": "^1.0.0",
     "grunt-contrib-jade": "^0.15.0",
